z-index of nav fixed

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -655,6 +655,14 @@ video {
   right: 0px;
 }
 
+.z-10 {
+  z-index: 10;
+}
+
+.z-50 {
+  z-index: 50;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
